<resources>
    <string name="app_name">RAHS Explore</string>
    <string name="app_ver">Version 1.0.0</string>

    <!--Welcome Strings -->
    <string name="welcome">Welcome to RAHS Explore</string>
    <string name="welcome_desc">Helping you explore Redlands\' historic buildings</string>
    <string name="house_usage">Look around for houses</string>
    <string name="house_usage_desc">Tap a house to see its name and to get more information</string>
    <string name="house_usage_hint">Hint: The orange location button will center the map at your current location</string>
    <string name="button_row">Share, favorite, or navigate</string>
    <string name="button_row_desc">Tap the heart to favorite, the car to navigate, or the link to share</string>
    <string name="location_usage">Houses around you</string>
    <string name="location_usage_desc">The orange location button on the map will center the map at your current location</string>
    <string name="conclusion">Have fun exploring!</string>
    <string name="conclusion_desc">Tap the drawer icon for favorites and settings</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="ok_btn">OK</string>


    <!--Alert String-->
    <string name="no_internet">No Internet connection was detected. Connect to the internet and try again.</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>

    <!--Navigation Bar Strings-->
    <string name="main_map">Main Map</string>
    <string name="house_list">House List</string>
    <string name="faq">FAQ</string>
    <string name="my_favorites">My Favorites</string>
    <string name="recents">Recently Viewed</string>
    <string name="my_map">My Map</string>
    <string name="other">Other</string>

    <!-- Settings Strings -->
    <string name="settings">Settings</string>
    <string name="personalization">Personalization</string>
    <string name="recent_list_size">Recent List Size</string>
    <string name="recent_list_size_desc">Adjust the size of your recently viewed houses</string>
    <string name="clear_recents">Clear recently viewed list</string>
    <string name="clear_favorites">Clear favorites</string>

    <string name="nav">Navigation</string>
    <string name="starting_point">Starting point</string>
        <string name="starting_point_desc">Choose where to start the map upon opening the app</string>
        <string name="last_point">Last point</string>
        <string name="downtown_redlands">Downtown Redlands</string>
        <string name="current_location">Current location</string>

    <string name="notifications">Notifications</string>
    <string name="new_houses_added">New Houses Added</string>
    <string name="new_houses_added_desc">Sends a notification when new houses are added to the database</string>

    <string name="misc">Other</string>
    <string name="view_help">View help slides</string>
    <string name="view_help_desc">Review the basics of the app</string>
    <string name="credits">Credits</string>
    <string name="credits_desc">Meet the awesome people behind the app</string>
    <string name="donate">Join the RAHS</string>
    <string name="donate_desc">Your support really helps!</string>


    <!--Social Strings-->
    <string name="share_prefix">"Check out this cool building in Redlands!\n"</string>
    <string name="share_using">Share using...</string>

    <!--Credits Strings-->
    <string name="data_credits">
        Data provided by the Redlands Historical Society.\n
        Mapping API provided by Esri ArcGIS Runtime SDK for Android. \n
    </string>
    <string name="many_thanks">
        We thank the following people:\n
        Trish Cornez for her undying support with this project. Without her, this wouldn\'t be possible.\n
        Ron Running and Ben Parker for providing the housing data and idea for this app.\n
        The Redlands Historical Society for their extensive cataloging of Redlands\' historical properties.\n
    </string>
    <string name="copyright">
        Map Data Copyright © 2013 ESRI, i-cubed, GeoEye\n
        App © 2017 David Galindo and Sean Unger\n
        Made in Redlands, CA
    </string>


    <!-- Test Strings-->
    <string name="testName">Elizabeth Marshall House</string>
    <string name="testAddress">921 S. Center St. Redlands, CA</string>
    <string name="testBuildAwarded">Built 1904, Awarded in 2009</string>
    <string name="testDescription">The original building permit for this charming Victorian cottage-style house was issued on April 29, 1904 with an estimated cost of $2000.  The water connection record is dated May 2, 1904 and construction of the house was completed by July 16, 1904.  Mrs. Elizabeth Marshall, hired M. E. Davenport to build the house with “plans showing a modern building with every appointment and convenience.”  A boiler room, in-room radiators, and a cold storage room seem to support this claim.  The house is located at 921 Center Street in Redlands, California and sits on lots 8, 9 and 10 with an adjacent orchard planted on lots 11, 12 and 13, all on block 26 of the Residence Plat.
Elizabeth was married to Hugh Marshall around 1878 in Riverside, California.  Elizabeth, born in England, and Hugh, born in Scotland, are found in the 1880 census in San Francisco and then in the 1900 census living in Redlands on Brookside with a servant.  Hugh died in 1901 from “La Gripp” and both he and Elizabeth are buried in the Hillside Memorial Cemetery.Today it appears that the overall house footprint has largely remained intact, with the exception of a one-room addition at the rear of the house.  The house is a one and a half story clapboard sided structure with raised redwood foundation and has wide boxed decorative eaves with herringbone corners and crenellated bracket pairs highlighted with dentils across the frieze. The roof material is composition shingle. The house has two original brick chimneys, one being the ventilation for the kitchen cooking. The wooden front door with lower wood panels and leaded citrus-themed ”newer” glass above is surrounded by a plain wood molding.
1960 city records show a permit for a garage valued at $1200 and a framed detached garage is positioned at the end of a ribbon driveway.  A commendable reuse feature of the house is an outbuilding, in similar clapboard style, which was actually the garage of a neighbor.  When the current owners learned of its future demise, they paid to have it relocated on their property as a shed.
Two and a half years after building the house, Mrs. Marshall sold the cottage to Thomas and Mary Jackson who then, only after nine months, sold it to Charles A. and Rose E. Rolfe.  The Rolfe’s also acquired the adjacent lots in 1907, creating the current configuration of the property.
The Marshall House has had approximately 16 owners during its 105 years of existence but only two long-term residents.  Probably, the most notable early homeowner was Mr. Rolfe, who lived there for 26 years (1907 to 1933).  According to the 1934 Redlands Daily Facts, Mr. Rolfe designed and installed all of the fire alarm and telephone system exhibits for the Chicago World Fair in 1893, and is credited with many inventions.  In 1905 he acquired the Southwest Home Telephone Company, headquartered in Redlands, and made the utility “one of the indispensible conveniences.”
Albert F. Koehler, who was employed at Bank of America in San Bernardino, (son of George W. Koeler, a rancher and zanjero for Redlands and South Mountain Water companies) is listed in the Redlands City Directory as a resident of the house for over 40 years (1941 to 1988).
A prominent feature of this house is the steeply pitched hipped roof with multiple pagoda inspired gables, including a dominant offset high gable at the front of the house with decorative wood ends.  This roof style is more indicative of a British inspired Queen Anne Victorian Cottage, rather than American Queen Anne, having taken its inspiration from the Chinese pagoda at the Kew gardens and reinterpreted in many Victorian period homes of the English countryside.
The current owners, Shawn Forrester and Brenda Taege purchased the property in 2001.  They have accomplished extensive period renovations and restorations.  The most noteworthy is the restoration of three porches, particularly the front recessed porch which sits at the right front corner of the house and is surrounded by square posts and decorative supports and balustrades.  The wood porch, brought back from an enclosed sunroom, is asymmetrically placed beside the front door and is approached by concrete steps and bi-level porch piers, which imitate the recessed rectangular decoration in the porch piers.  Shawn and Brenda used a baluster borrowed from the home at 430 Highland Avenue, to mill balusters and create the railing you see today. The small porch located to the left of the house was restored using a 1914 photo of the house shown in “Redlands the Radiant Garden Spot of California and A Busy Business Centre.”  There is a small back porch, also recreated, using period elements.
Most windows for the house are double hung with plain molding trim, which are typical of the period.  The side of the house has an angular bay window.  The homeowners successfully replaced and restored a window at the front porch with a similar authentic period style salvage window.  The Palladian window with cross-leaded panes in the gable end above the front porch is actually a “newer” but period-appropriate addition made by the owners.  Local artist Tom Medlicott created this window to replace an attic vent.
The Redlands Area Historical Society applauds Shawn and Brenda for their efforts and hard work in meticulously renovating and preserving the integrity of this historic Redlands home.  We are pleased to present them with this Heritage Award.
Researched and written by Susan M. Keith and Kathy Beall</string>


    <!-- Drawer Strings -->
    <string name="action_main_menu">Main Menu</string>
    <string name="action_goto_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="title_activity_settings">Settings</string>
    
    <!--Licensing Strings-->
    <string name="client_id">k2n8aWWWSNQxtY5O</string>

</resources>
