<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/mainMap"
            android:title="@string/main_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:checked="true"
          />
        <item
            android:id="@+id/favorites"
            android:title="@string/my_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"

            />
        <item
            android:id="@+id/recents"
            android:title="@string/recents"
            android:icon="@drawable/ic_schedule_black_24dp"
            />

        <item
            android:id="@+id/houseList"
            android:title="@string/house_list"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item
            android:id="@+id/settingsMenu"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            />

    </group>
</menu>