<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"

        app:titleTextColor="@android:color/white">


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/appInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appInfo"
        android:layout_centerHorizontal="false"
        android:orientation="vertical">


        <TextView
            android:id="@+id/appVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_ver"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/dataCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_credits"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/manyThanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/many_thanks"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorCopyright"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <!--Every good app needs an easter egg-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/appInfo"
        android:layout_alignTop="@+id/copyright"
        android:layout_marginEnd="53dp"
        android:layout_marginTop="16dp"
        android:onClick="itsASecretToEverybody"
        android:text="Sean"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorTransparent"
        android:visibility="visible" />
</RelativeLayout>