<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:contextClickable="true" />

        <RelativeLayout
            android:id="@+id/postLoadContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <ImageView
                android:id="@+id/houseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:visibility="visible"
                app:srcCompat="@drawable/house_ex" />
            <TextView
                android:id="@+id/houseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/houseImage"
                android:background="@color/colorAccent"
                android:padding="16dp"
                android:text="@string/testName"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/background_light"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/houseAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/houseName"
                android:text="@string/testAddress"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/houseBuiltAwarded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/houseAddress"
                android:text="@string/testBuildAwarded"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />



            <TextView
                android:id="@+id/houseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/houseBuiltAwarded"
                android:background="@drawable/papyrus"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4sp"
                android:text="@string/testDescription"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>